[tool.poetry]
name = "tbedor-square2"
version = "0.1.0"
description = ""
authors = ["Tom Bedor <tbedor@squareup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aider-chat = "^0.48.1"

[[tool.poetry.source]]
name = "artifactory"
default = true
url = "https://artifactory.global.square/artifactory/api/pypi/block-pypi/simple"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
